Edits from the Medium article.

--- a/pairs_trading.ipynb
+++ b/pairs_trading.ipynb
@@ -99,8 +99,8 @@
     "S&P 500 Industry Sectors\n",
     "</h3>\n",
     "<p>\n",
-    "In this notebook, pairs are selected from the S&P 500 stock universe. These stocks are have a high trading volume, with a small\n",
-    "bid-ask spread. These stocks are also easier to short, with lower borrowing fees and a lower chance of a short position being called\n",
+    "In this notebook, pairs are selected from the S&P 500 stock universe. These stocks have a high trading volume, with a small\n",
+    "bid-ask spread. S&P 500 stocks are also easier to short, with lower borrowing fees and a lower chance of a short position being called\n",
     "back.\n",
     "</p>\n",
     "<p>\n",
@@ -134,11 +134,11 @@
     "GitHub repository.\n",
     "</p>\n",
     "<p>\n",
-    "The S&P 500 sectors are:\n",
+    "The S&P 500 industry sectors are:\n",
     "</p>\n",
     "<ol>\n",
     "<li>\n",
-    "Consumer discressionary\n",
+    "Consumer discretionary\n",
     "</li>\n",
     "<li>\n",
     "Consumer staples\n",
@@ -173,7 +173,7 @@
     "</ol>\n",
     "<p>\n",
     "The stocks from the Barchart list include stocks for the same company, with different classes (e.g., class A, class B or class C stocks).\n",
-    "The list of stocks if filtered to remove all but the lowest stock class (e.g., if there is a class B stock, the class A stock is removed\n",
+    "The list of stocks is filtered to remove all but the lowest stock class (e.g., if there is a class B stock, the class A stock is removed\n",
     "from the list).\n",
     "</p>\n",
     "<h3>\n",
@@ -181,8 +181,8 @@
     "</h3>\n",
     "<p>\n",
     "The data used to model pairs trading in this notebook uses close price data for all of the S&P 500 stocks from the start date to yesterday\n",
-    "(e.g., one day in the past). In other models (see Stock Market Cash Trigger and ETF Rotation) the stock data was downloaded the first time the\n",
-    "notebook was run and stored in temporary files.  In these notebooks the first notebook run incurred the initial overhead of downloading\n",
+    "(e.g., one day in the past). In other models (see Stock Market Cash Trigger and ETF Rotation) the close price data was downloaded the first time the\n",
+    "notebook was run and stored in temporary files.  The first notebook run incurred the initial overhead of downloading\n",
     "the data, but subsequent runs could read the data from local temporary files.\n",
     "</p>\n",
     "<p>\n",
@@ -438,10 +438,10 @@
     "Lookback Time Period\n",
     "</h3>\n",
     "<p>\n",
-    "Pairs are selected for trading using a lookback period. The longer the lookback period (with more data points) the\n",
+    "Pairs are selected for trading using a lookback period. The longer the lookback period, the\n",
     "less error there will be in the selection statistics, assuming that the data is stable\n",
     "(e.g., constant mean and standard deviation).  Stock price time series are not stable over time, however. The mean and the\n",
-    "standard deviation changes, as do other statistics like correlation and cointegration (mean reversion).\n",
+    "standard deviation change, as do other statistics like correlation and cointegration (mean reversion).\n",
     "</p>\n",
     "<p>\n",
     "In using a lookback period to choose trading pairs we are making the assumption that the past\n",
@@ -460,11 +460,7 @@
     "Mean Reversion\n",
     "</h2>\n",
     "<p>\n",
-    "A single stock price (or log price) series is rarely stationary and mean reverting.\n",
-    "In selecting stock pairs we are looking for a stock pair with a spread time series that is stationary and mean reverting. A stationary time series\n",
-    "is a time series that has a constant mean and standard deviation. Stock time series are constantly changing, so we are looking for\n",
-    "a pair that has a spread that is stationary and mean reverting over the back test period and, we hope, into the out-of-sample trading\n",
-    "period.\n",
+    "A single stock price series is rarely stationary and mean reverting. In pairs trading, we are looking for stock pairs where the stock price spread time series is stationary and mean in the in-sample (lookback) period. We are making a bet that the spread time series will also be stationary and mean reverting in the out-of-sample trading period.\n",
     "</p>\n",
     "<p>\n",
     "When a pair forms a mean reverting, stationary time series, it is referred to as a cointegrated time series.\n",
@@ -496,10 +492,7 @@
     "\\$ s < \\mu - \\delta \\space when \\space P_A < \\beta P_B \\space (long \\space P_A, \\space sort \\space P_B) $\n",
     "\n",
     "<p>\n",
-    "When <i>s</i> is above the mean at some level (perhaps one standard deviation), a short position will be taken in stock A\n",
-    "and a long position will be taken in stock B.  When <i>s</i> is below the mean at some level (perhaps one standard deviation)\n",
-    "a long position will be taken in stock A and a short position will be taken in stock B. The position taken in stock B will be\n",
-    "larger than the postion in stock A by a factor of β.\n",
+    "When s is above the mean at some level, delta (perhaps one standard deviation), a short position will be taken in stock A and a long position will be taken in β shares of stock B. When s is below the mean at some level (perhaps one standard deviation) a long position will be taken in stock A and a short position will be taken in β shares of stock B.\n",
     "</p>\n",
     "<p>\n",
     "In identifying a pair for pairs trading, a determination is made on whether <i>s</i> is mean reverting.  The process of determining\n",
@@ -531,14 +524,13 @@
     "slope are tested with the Augmented Dickey-Fuller (ADF) test to determine whether mean reversion is likely.\n",
     "</p>\n",
     "<p>\n",
-    "Linear regression is designed to provide a measure of the effect of a dependent variable (on the x-axis) to the independent\n",
-    "variable (on the y-axis).  An example might be the body mass index (a measure of body fat) on the x-axis to the blood cholesterol\n",
-    "on the y-axis.\n",
+    "Linear regression is designed to provide a measure of the effect of a dependent variable (on the x-axis) on the independent\n",
+    "variable (on the y-axis). An example might be body mass index (a measure of body fat) on the x-axis and blood cholesterol on the y-axis.\n",
     "</p>\n",
     "<p>\n",
     "In selecting pairs, we pick pairs with a high correlation from the same industry sector. This means that some\n",
     "process is acting on both stocks. However, the movement of one stock does not necessarily cause movement in the other stock. Also,\n",
-    "both stock price series tend to be driven by an underlying random process. This means that linear regression is not perfectly suited\n",
+    "both stock price series are driven by an underlying random process. This means that linear regression is not perfectly suited\n",
     "for analyzing pairs. Two linear regressions are performed since we don't know which stock to pick as the dependent variable. The regression\n",
     "with the highest slope is used to analyze mean reversion and build the cointegrated time series.\n",
     "</p>\n",
@@ -733,8 +725,8 @@
     "Example: AAPL/MPWR\n",
     "</h3>\n",
     "<p>\n",
-    "AAPL (Apple Inc) and MPWR (Monolithic Power Systems, Inc) are in the technology industry sector.  YUM (Yum brands is a food company in a\n",
-    "different industry sector). The correlations of MPWR and YUM with AAPL in the first half of 2007 are shown below.  AAPL and MPWR are both technology sector\n",
+    "AAPL (Apple Inc) and MPWR (Monolithic Power Systems, Inc) are in the technology industry sector.  YUM (Yum brands) is a food company in a\n",
+    "different industry sector. The correlations of MPWR and YUM with AAPL in the first half of 2007 are shown below.  AAPL and MPWR are both technology sector\n",
     "stocks, while YUM brands is a food company. Other than overall stock market dynamics, we would not expect AAPL and YUM to be correlated, so this\n",
     "appears to be an example of false correlation.\n",
     "</p>"
@@ -942,7 +934,7 @@
     "correlation can be used as a first filter for pairs.\n",
     "</p>\n",
     "<p>\n",
-    "The tests for cointegration may find that a pair with a low low correlation value is cointegrated and mean reverting. One\n",
+    "The tests for cointegration may find that a pair with a low correlation value is cointegrated and mean reverting. One\n",
     "example is AAPL and technology sector stock GPN (Global Payments Inc.)  For the first half of 2007, AAPL and GPN have\n",
     "a low correlation.\n",
     "</p>"
@@ -1153,16 +1145,15 @@
    "metadata": {},
    "source": [
     "<p>\n",
-    "Looking that the literature, there doesn't seem to be a consensus on whether the Granger or Johansen tests are better. Some authors suggest\n",
-    "using both tests, but they don't provide any empirical insight into why this is advantageous.\n",
+    "In the research papers on cointegration, there doesn't seem to be a consensus on whether the Granger or\n",
+    "Johansen tests are better. Some authors suggest using both tests, but they don't provide any empirical insight into why this might be advantageous.\n",
     "</p>\n",
     "\n",
     "<h2>\n",
     "Correlation\n",
     "</h2>\n",
     "<p>\n",
-    "After selecting stocks based on their industry sector, the next filter used is the pair correlation of the\n",
-    "natural log of the close prices.\n",
+    "After selecting stocks based on their industry sector, the next filter used is the pair correlation of the close prices.\n",
     "</p>\n",
     "<p>\n",
     "Stocks that are strongly correlated are more likely to also exhibit mean reversion since they have similar market behavior.\n",
@@ -1303,7 +1294,7 @@
     "pairs will be tested for correlation over the lookback period.\n",
     "</p>\n",
     "<p>\n",
-    "Correlation is calculated on the log of the price for each stock pair.\n",
+    "Correlation is calculated price for each stock pair.\n",
     "</p>\n",
     "<p>\n",
     "The windowed correlation is not stable. The plot below shows the correlation between two stocks, AAPL and MPWR, over windowed\n",
@@ -1412,7 +1403,7 @@
     "well.\n",
     "</p>\n",
     "<p>\n",
-    "The plot below shows the number of pairs, in a half year time period period, with a correlation above a particular cutoff.\n",
+    "The plot below shows the number of pairs, in a half year time period, with a correlation above a particular cutoff.\n",
     "</p>"
    ]
   },
@@ -1451,8 +1442,7 @@
    "metadata": {},
    "source": [
     "<p>\n",
-    "In the plot above, about 75% of the pairs are highly correlated around 2008. The corresponds to the 2008-2009 stock market crash\n",
-    "caused by the financial crisis. This lends validity to the financial market maxim that in a market crash all assets become correlated.\n",
+    "In the plot above, about 75% of the pairs are highly correlated around 2008. This corresponds to the 2008–2009 stock market crash caused by the financial crisis. The high correlation around the crash lends validity to the financial market maxim that in a market crash, all assets become correlated.\n",
     "</p>\n",
     "<p>\n",
     "To the extent that correlation is a predictor for mean reversion, this also suggests that mean reversion statistics may be volatile.\n",
@@ -1820,7 +1810,7 @@
     "Stability of Correlation\n",
     "</h3>\n",
     "<p>\n",
-    "For pairs trading to be a profitable strategy the statistics that are observed over a past period must persists into a future period often\n",
+    "For pairs trading to be a profitable strategy the statistics that are observed over a past period must persist into the next time period often\n",
     "enough to be profitable.  If a pairs forms a stationary mean reverting time series in a past period, profitable pairs trading relies\n",
     "on this statistic holding over the out-of-sample trading period (often enough to be profitable).\n",
     "</p>\n",
@@ -2035,7 +2025,7 @@
     "takes place over a three month out-of-sample period following the look-back period.\n",
     "</p>\n",
     "<p>\n",
-    "For a cointegrated pair, the spread time series is, in an ideal world, a stationary time series with a constant mean and standard deviation.\n",
+    "For a cointegrated pair, the spread time series is a stationary time series with a constant mean and standard deviation.\n",
     "The spread time series is mean reverting, so that divergences from the mean return to the mean. The statistics of the spread time series,\n",
     "in an ideal world, are consistent between the look-back period and the trading period.\n",
     "</p>\n",
@@ -2408,20 +2398,20 @@
     "</h2>\n",
     "<p>\n",
     "Mathematical finance often assumes normal distributions and statistics that are constant (constant mean and standard deviation, for example).\n",
-    "If these assumptions involving the statistics of financial data were actually true, it would be much easier to make money\n",
-    "(except for the fact that mathematical finance would assume that these opportunities would have already been arbitraged out).\n",
+    "If these assumptions were actually true, it would be much easier to make money (except for the fact that mathematical finance would assume\n",
+    "that these opportunities would have already been arbitraged out).\n",
     "</p>\n",
     "<p>\n",
-    "The assumptions made in mathematical finance often exist because these assumptions allow closed form (e.g., equation based) solutions\n",
-    "to finance problems. The fact that these assuptions are wrong in most cases is often ignored.\n",
+    "The assumptions made in mathematical finance often exist because they allow closed-form (e.g., equation-based) solutions to finance problems.\n",
+    "The fact that these assumptions are wrong in most cases is often ignored.\n",
     "</p>\n",
     "<p>\n",
-    "The correlation and cointegration statistics are not constant between the in-sample and out-of-sample periods. There are wide variations\n",
-    "in correlation between time periods. Cointegration is also not constant from one time period to another. In fact, in 60% of the cases\n",
-    "a pair that is cointegrated in one time period is not cointegrated in the following time period.\n",
+    "Often the correlation and cointegration statistics are not constant between the in-sample and out-of-sample periods. In the case of correlation,\n",
+    "there can be wide variations between adjacent time periods. Cointegration is also not constant from one time period to another.\n",
+    "In fact, in 60% of the cases, a pair that is cointegrated in one time period is not cointegrated in the following time period.\n",
     "</p>\n",
     "<h2>\n",
-    "An Algorithm of Selecting Pairs\n",
+    "An Algorithm for Selecting Pairs\n",
     "</h2>\n",
     "<p>\n",
     "Based on the statistical observation from the data above, I can propose the following algorithm to select pairs. These criteria\n",
