Ran current notebook

--- a/pairs_trading_backtest.ipynb
+++ b/pairs_trading_backtest.ipynb
@@ -7,18 +7,104 @@
     "Backtesting a Pairs Trading Strategy\n",
     "</h2>\n",
     "<p>\n",
-    "This notebook is a sequel to the notebook Exploratory Statistics of Pairs Trading\n",
+    "This notebook is a sequel to the notebook <i>Exploratory Statistics of Pairs Trading</i>\n",
     "(https://github.com/IanLKaplan/pairs_trading/blob/master/pairs_trading.ipynb). The previous notebook explores the algorithms for selecting\n",
     "pairs and the statistics of pairs trading. This statistical exploration provides the foundation for the strategy that his backtested in\n",
     "this notebook. For a discussion of pairs trading, the algorithms used to select pairs and the background for the strategy that is\n",
-    "backetested in this notebook please see the pevious notebook.\n",
+    "backetested in this notebook, please see the pevious notebook.\n",
     "</p>\n",
-    "<h3>\n",
+    "<h2>\n",
     "Pairs Trading Strategy\n",
+    "</h2>\n",
+    "<h3>\n",
+    "Shorting Stocks in Pairs Trading\n",
     "</h3>\n",
+    "<p>\n",
+    "This section discusses the mechanics of taking a short position in a stock, which is more complicated than taking a long position.\n",
+    "</p>\n",
+    "<p>\n",
+    "Pairs trading is a market neutral long/short strategy where the long and short positions for a pair have approximately equal\n",
+    "dollar values when the position is opened. A profit is realized when there is mean reversion in the prices of a pair.\n",
+    "</p>\n",
+    "<p>\n",
+    "When a stock is \"shorted\", the stock is borrowed and then immediately sold, realizing cash.  For example, if 100 shares at a current market\n",
+    "price of 10 is shorted, the brokerage account will be credited with 1000 (100 x 10).  At some point in the future, the borrowed stock must be paid\n",
+    "back buy buying the stock at the current market price.  A short position is profitable when the market price of the stock goes down.\n",
+    "For example, if the market price of the stock shorted at 10 goes down to 6, there is a profit of 4 per share (4 x 100 = 400).\n",
+    "</p>\n",
+    "<p>\n",
+    "Short positions can have unlimited loss when the stock price goes up.  For example, if the market price of the 10 stock rises to\n",
+    "14 per share, there is a 400 loss on the 100 share purchase. If the stock price doubles to 20 there will be a loss of 10 per share\n",
+    "or 1000 for the 100 share short.\n",
+    "</p>\n",
+    "<p>\n",
+    "Shorting stocks is often considered a risky investment strategy because of the potential of unlimited risk in short positions. Pairs\n",
+    "trading uses market neutral positions where a long position is opened that is, initially, approximately equal to the dollar value of the short position.\n",
+    "The pairs that are traded are chosen from the same industry sector and are highly correlated and cointegrated. If the market price of\n",
+    "the shorted stock rises, the value of the long member of the pair should rise as well. The profit in the long position will tend\n",
+    "to offset the loss in the short position. This makes the pairs trading strategy much less risky than a short only strategy.\n",
+    "</p>\n",
+    "<p>\n",
+    "When a stock is shorted the stock is borrowed. This is treated as a margin loan. The brokerage requires that the customer maintain a\n",
+    "balance with liquid assets of 150 percent of the amount borrowed. This includes the proceeds of the short sale, plus 50 percent.\n",
+    "For example, if 100 shares of a 10 dollar stock are shorted, the account will be credited with 1000. The account must also\n",
+    "have an addition balace of 500. The margin requirement can be met with cash or highly tradable \"blue chip\" stocks (e.g., S&P 500 stocks).\n",
+    "</p>\n",
+    "<p>\n",
+    "When the pairs spread crosses a threshold, a long-short position is opened in the pair. The dollar value of the long and short positions\n",
+    "will be approximately equal (they will usually not be exactly equal because we are trading whole share amounts).  This involves the following\n",
+    "steps:\n",
+    "</p>\n",
+    "<ol>\n",
+    "<li>\n",
+    "<p>\n",
+    "Open the short position. This will result in cash from the short sale.\n",
+    "</p>\n",
+    "<p>\n",
+    "Stock A has a price of 10. Shorting 100 shares results in 1000 in cash.\n",
+    "</p>\n",
+    "</li>\n",
+    "<li>\n",
+    "<p>\n",
+    "The proceeds from the short sale are used to pay for the long position. If the cash value of the short position was less than the long\n",
+    "position, some additional cash will be needed to open the long position.\n",
+    "</p>\n",
+    "<p>\n",
+    "Stock B has a price of 20 per share. A long position is taken in 50 shares. The 1000 realized from the short is used\n",
+    "to pay for the long position.\n",
+    "</p>\n",
+    "</li>\n",
+    "<li>\n",
+    "<p>\n",
+    "The 1000 long position is used for the margin requirement. An additional 500 in cash or highly liquid stocks will is required for\n",
+    "the margin requirement.\n",
+    "</p>\n",
+    "</li>\n",
+    "</ol>\n",
+    "<p>\n",
+    "When positions are opened, there must be an additional 50% in the margin account. SEC regulation T requires that there must be at\n",
+    "least 25% as the prices of the stocks change. Interactive Brokers (IB) calculates the margin requirements in real time and will liquidate\n",
+    "account assets that cross the Reg T margin line.\n",
+    "</p>\n",
+    "<p>\n",
+    "If there is a liquidity deficit, IB will liquidate the deficit amount time 4.\n",
+    "</p>\n",
+    "<p>\n",
+    "The pairs trading strategy will have a portfolio of short and long positions which are opened and closed as the pair spread moves.\n",
+    "At any time, the aggregate value of the short positions and the long positions, plus margin cash, must be within the margin\n",
+    "requirements.\n",
+    "</p>\n",
     "<h4>\n",
-    "In-sample and out-of-sample time periods\n",
+    "Margin references\n",
     "</h4>\n",
+    "<ul>\n",
+    "<li>\n",
+    "<a href=\"https://www.interactivebrokers.com/en/general/education/pdfnotes/WN-UnderstandingMargin.php\">Understanding Margin Webinar Notes</a>\n",
+    "</li>\n",
+    "</ul>\n",
+    "<h3>\n",
+    "In-sample and out-of-sample time periods\n",
+    "</h3>\n",
     "<ul>\n",
     "<li>\n",
     "<p>\n",
@@ -69,8 +155,13 @@
     "This backtest is intended to help understand whether this strategy is worth pursuing for actual trading.\n",
     "</p>\n",
     "<p>\n",
-    "At the start date of the backtest, there is an investment of N dollars (e.g., $100,000). At the end of each trading period,\n",
-    "all positions are closed. The resulting cash is used in the next trading period.\n",
+    "At the start date of the backtest, there is an investment of N dollars (e.g., 100,000). Of these funds, approximately 60,000 is used for\n",
+    "long and short positions. The remaining approximately 40,000 is used to satisify the margin requirement.\n",
+    "</p>\n",
+    "<p>\n",
+    "When the spread crosses the median the long and short positions will be closed.\n",
+    "</p>\n",
+    "At the end of each trading period, any open positions will closed. The resulting cash is used in the next trading period.\n",
     "</p>\n",
     "<p>\n",
     "For each pair (in the N pair set) in the out-of-sample trading period:\n",
@@ -80,11 +171,11 @@
     "Calculate the spread value for the current trading day.\n",
     "</li>\n",
     "<li>\n",
-    "If the spread value has returned to the in-sample mean and there is an open long/short position, close the position and update profit and loss.\n",
-    "\"Return to mean\" is complicated by the fact that the mean may be overshot.\n",
+    "If there is an open pair position that crosses the mean, the positions will be closed. The profit and\n",
+    "loss amount will be updated.\n",
     "</li>\n",
     "<li>\n",
-    "If there is no open position for the pair and the spread value is above or below the trading value (e.g., standard deviation times 0.75)\n",
+    "If the spread value for a pair crosses the treading threshold (e.g., standard deviation times 0.75),\n",
     "open a long/short position.\n",
     "</li>\n",
     "<li>\n",
@@ -102,7 +193,10 @@
     "</h4>\n",
     "<ol>\n",
     "<li>\n",
-    "Position for each trade and P/L for each trade.\n",
+    "Running margin values, by day.\n",
+    "</li>\n",
+    "<li>\n",
+    "Positions for each pair and P/L for each trades.\n",
     "</li>\n",
     "<li>\n",
     "Return for each pair in the trading period\n",
