Added a bunch of code.

--- a/pairs_trading_backtest.ipynb
+++ b/pairs_trading_backtest.ipynb
@@ -76,8 +76,8 @@
     "</li>\n",
     "</ol>\n",
     "<p>\n",
-    "Interactive Brokers charges a fee for short positions is 0.25 percent or 0.25/360 percent per day that the position is held. This fee is small enough that\n",
-    "it can be ignored.\n",
+    "Interactive Brokers charges a fee for short positions is 0.25 percent or 0.25/360 percent per day that the position is held. For a yearly\n",
+    "short position of 60,000 the total short interest cost would be about 105.  This is small enough that the short interest cost can be ignored.\n",
     "</p>\n",
     "<p>\n",
     "The pairs trading strategy will have a portfolio of short and long positions which are opened and closed as the pair spread moves.\n",
