Check-point for a change.

--- a/pairs_trading_backtest.ipynb
+++ b/pairs_trading_backtest.ipynb
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 79,
    "metadata": {
     "collapsed": true
    },
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 83,
    "outputs": [
     {
      "data": {
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 84,
    "outputs": [],
    "source": [
     "\n",
@@ -1584,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 85,
    "outputs": [
     {
      "data": {
@@ -1609,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 86,
    "outputs": [],
    "source": [
     "\n",
@@ -1719,7 +1719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 87,
    "outputs": [
     {
      "data": {
@@ -1753,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 88,
    "outputs": [],
    "source": [
     "\n",
@@ -1846,7 +1846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 89,
    "outputs": [
     {
      "data": {
@@ -1880,7 +1880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 90,
    "outputs": [
     {
      "data": {
@@ -1919,7 +1919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 91,
    "outputs": [
     {
      "data": {
@@ -1954,7 +1954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 92,
    "outputs": [],
    "source": [
     "\n",
@@ -2012,7 +2012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 93,
    "outputs": [
     {
      "data": {
@@ -2046,7 +2046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 94,
    "outputs": [
     {
      "data": {
@@ -2081,7 +2081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 95,
    "outputs": [],
    "source": [
     "\n",
@@ -2160,7 +2160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 96,
    "outputs": [
     {
      "data": {
@@ -2236,7 +2236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 97,
    "outputs": [
     {
      "name": "stdout",
@@ -2302,7 +2302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 98,
    "outputs": [
     {
      "name": "stdout",
@@ -2325,7 +2325,39 @@
      "text": [
       "total percent positive trades: 61.57\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "cash_vals = all_transactions_df['day_profit']\n",
+    "print(f'total profit (loss): {round(sum(cash_vals),0)} min val: {round(min(cash_vals),0)} max val: {round(max(cash_vals),0)}')\n",
+    "\n",
+    "positive_trades = all_transactions_df['positive_trades']\n",
+    "negative_trades = all_transactions_df['negative_trades']\n",
+    "\n",
+    "total_trades = positive_trades + negative_trades\n",
+    "frac_positive = round((positive_trades / total_trades) * 100, 2)\n",
+    "\n",
+    "plot_hist(frac_positive, x_label='Percent positive trade/total trade per day', y_label='Count', title='Daily Percentage of Positive Trades', add_mean=False)\n",
+    "\n",
+    "print(f'total percent positive trades: {round((sum(positive_trades)/sum(total_trades)) * 100,2)}')\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "outputs": [
     {
      "data": {
       "text/plain": "<Figure size 1000x800 with 1 Axes>",
@@ -2345,19 +2377,6 @@
    ],
    "source": [
     "\n",
-    "\n",
-    "cash_vals = all_transactions_df['day_profit']\n",
-    "print(f'total profit (loss): {round(sum(cash_vals),0)} min val: {round(min(cash_vals),0)} max val: {round(max(cash_vals),0)}')\n",
-    "\n",
-    "positive_trades = all_transactions_df['positive_trades']\n",
-    "negative_trades = all_transactions_df['negative_trades']\n",
-    "\n",
-    "total_trades = positive_trades + negative_trades\n",
-    "frac_positive = round((positive_trades / total_trades) * 100, 2)\n",
-    "\n",
-    "plot_hist(frac_positive, x_label='Percent positive trade/total trade per day', y_label='Count', title='Daily Percentage of Positive Trades', add_mean=False)\n",
-    "\n",
-    "print(f'total percent positive trades: {round((sum(positive_trades)/sum(total_trades)) * 100,2)}')\n",
     "\n",
     "def return_slice(return_df: pd.DataFrame, start_date: datetime, end_date: datetime) -> pd.DataFrame:\n",
     "    return_index = return_df.index\n",
